--- a/index.html
+++ b/index.html
@@ -1,16 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <title>Document</title>
 </head>
-<body>
 
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Over mij
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Biografie</a>
+                        <a class="dropdown-item" href="#">Curriculum Vitae</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Behandeling
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Algemeen</a>
+                        <a class="dropdown-item" href="#">Gezeldschapsdieren</a>
+                        <a class="dropdown-item" href="#">Paarden</a>
+                        <a class="dropdown-item" href="#">Ezels</a>
+                        <a class="dropdown-item" href="#">Behandelindicaties</a>
+                        <a class="dropdown-item" href="#">Samenwerking</a>
+                        <a class="dropdown-item" href="#">Geschiedenis</a>
+                        <a class="dropdown-item" href="#">Behandeltarieven</a>
+                        <a class="dropdown-item" href="#">Vergoedingen</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Therapievormen
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Fysiotherapie</a>
+                        <a class="dropdown-item" href="#">Chiropractie</a>
+                        <a class="dropdown-item" href="#">Osteopathie</a>
+                        <a class="dropdown-item" href="#">Sportkeuringen</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Ervaringen
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Honden</a>
+                        <a class="dropdown-item" href="#">Katten</a>
+                        <a class="dropdown-item" href="#">Paarden</a>
+                        <a class="dropdown-item" href="#">Ezels</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Links</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Contact
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Praktijk</a>
+                        <a class="dropdown-item" href="#">Informatie aanvraag</a>
+                        <a class="dropdown-item" href="#">Aanmeldingsformulier voor nieuwe cliёnt
+                        </a>
+                </li>
+        </div>
+
+
+    </nav>
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
